fix: padding issue on smaller screens

--- a/src/app.css
+++ b/src/app.css
@@ -341,6 +341,9 @@ header button:hover {
   position: relative;
   z-index: 99;
 }
+.tab-buttons :nth-child(1) {
+  border-top-right-radius: 0;
+}
 .tab-buttons :nth-child(2) {
   border-top-left-radius: 0;
 }
@@ -476,13 +479,31 @@ header button:hover {
 }
 .projects-section ul li > img {
   width: 100%;
-  aspect-ratio: 16/9;
+  /* aspect-ratio: 16/9; */
   border-radius: 8px;
   border: 2px solid black;
   position: relative;
 }
 /* ---------- All media queries moved here ---------- */
+@media screen and (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
+  .projects-section {
+    padding: 10px;
+  }
+  .hero-content p:nth-child(2) {
+    font-size: 2.5rem;
+  }
 
+  .hero-content p:nth-child(3) {
+    font-size: 0.875rem;
+  }
+
+  .marquee__item {
+    font-size: 1.25rem;
+  }
+}
 @media (min-width: 768px) {
   .hero {
     grid-template-columns: 45% 55%;
